samples/_failures_safe/1761219950_6edf9a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8b1bce9.c: In function ‘main’:
./samples/SAFE/__tmp_c8b1bce9.c:137:16: error: missing terminating " character
  137 |         printf("Error reading matrix data
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c8b1bce9.c:137:9: error: expected expression at end of input
  137 |         printf("Error reading matrix data
      |         ^~~~~~
./samples/SAFE/__tmp_c8b1bce9.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c8b1bce9.c:137:9: error: expected declaration or statement at end of input
